# voice_agent_backend_server_example

./: .gitignore  Makefile  README.md  pyproject.toml  render.yaml
backend/: example.env  main.py
backend/app/: __init__.py  api.py
backend/app/voice_agent/: __init__.py  hf_asr.py  mock_asr.py  simple_agent.py  streaming_handler.py
backend/lib/: __init__.py
backend/lib/voice_streaming_framework/: __init__.py
backend/lib/voice_streaming_framework/asr/: __init__.py  base.py  hf_space.py  whisper_asr.py
backend/lib/voice_streaming_framework/audio/: __init__.py  chunk_queue.py  chunk_tracker.py  converter.py  streaming_pipeline.py  validator.py
backend/lib/voice_streaming_framework/core/: __init__.py  types.py
backend/lib/voice_streaming_framework/llm/: __init__.py  base.py  langgraph_adapter.py  openai_compatible.py
backend/lib/voice_streaming_framework/pipeline/: __init__.py  config.py  streaming.py
backend/lib/voice_streaming_framework/server/: __init__.py  voice_session_manager.py
backend/lib/voice_streaming_framework/text/: __init__.py  sentence_aggregator.py
backend/lib/voice_streaming_framework/transport/: __init__.py  (+3 more)
backend/scheduler/: __init__.py  daily_asr_scheduler.py
backend/tests/e2e/: AUDIO_DIAGNOSTIC_SUMMARY.md  DEBUGGING_NO_AUDIO.md  HOW_TO_FIX_NO_AUDIO.md  README.md  SUMMARY.md  __init__.py  conftest.py  generate_test_audio.py  monitor_audio_flow.sh  run_tests.sh  test_audio_diagnostics.py  test_simple_diagnostics.py  test_voice_conversation.py  test_webrtc_audio_output.py  test_webrtc_setup.py  test_websocket_connection.py
(+8 files in other folders)
